# NetScanCLI

./: README.md  pyproject.toml
net_inventory_cli/: __init__.py  __main__.py  crypto_store.py  discover.py  main.py  models.py  ssh_client.py  storage.py  wizard.py
net_inventory_cli/collectors/: __init__.py  linux.py  macos.py  windows.py
tests/: test_crypto_store.py  test_models.py  test_storage.py
